feat: projects bootstrap and switching (#50)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,12 +26,34 @@
   },
   "nav": {
     "files": "File Explorer",
+    "characters": "Characters",
     "outline": "Outline",
+    "knowledgeGraph": "Knowledge Graph",
     "workflow": "Workflow",
     "materials": "Materials",
     "publish": "Publish",
     "stats": "Stats",
     "settings": "Settings"
+  },
+  "projects": {
+    "title": "Project",
+    "current": "Current",
+    "manage": "Projects",
+    "create": "Create project",
+    "namePlaceholder": "Project name",
+    "nameLabel": "Name",
+    "descriptionLabel": "Description",
+    "styleGuideLabel": "Style guide",
+    "nameRequired": "Project name is required",
+    "createFailed": "Create failed, please retry",
+    "updateFailed": "Save failed, please retry",
+    "edit": "Edit project",
+    "update": "Save",
+    "delete": "Delete project",
+    "deleteHint": "Delete project “{{name}}”? Documents will be reassigned to another project; structured assets (characters/outline/graph) will be deleted.",
+    "switchHint": "Select a project to switch context",
+    "switchSaveFailed": "Failed to save current document: {{error}}",
+    "noProject": "No projects"
   },
   "files": {
     "newFile": "New file",
