--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -26,12 +26,34 @@
   },
   "nav": {
     "files": "文件浏览器",
+    "characters": "人物设定",
     "outline": "文档大纲",
+    "knowledgeGraph": "知识图谱",
     "workflow": "创作工作流",
     "materials": "素材库",
     "publish": "发布平台",
     "stats": "创作统计",
     "settings": "设置"
+  },
+  "projects": {
+    "title": "项目",
+    "current": "当前",
+    "manage": "项目管理",
+    "create": "创建新项目",
+    "namePlaceholder": "项目名称",
+    "nameLabel": "名称",
+    "descriptionLabel": "描述",
+    "styleGuideLabel": "风格指南",
+    "nameRequired": "请输入项目名称",
+    "createFailed": "创建失败，请重试",
+    "updateFailed": "保存失败，请重试",
+    "edit": "编辑项目",
+    "update": "保存",
+    "delete": "删除项目",
+    "deleteHint": "确定删除项目「{{name}}」？文档将被保留并转移到其它项目，结构化数据（人物/大纲/图谱等）将被删除。",
+    "switchHint": "选择项目以切换当前工作上下文",
+    "switchSaveFailed": "保存当前文档失败：{{error}}",
+    "noProject": "暂无项目"
   },
   "files": {
     "newFile": "新建文件",
